objects/Business_Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Business_Outcome_Description__c</fullName>
        <description>Description of the business outcomes</description>
        <label>Business Outcome Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leader__c</fullName>
        <description>Name of the leader affected by a particular business outcome.</description>
        <label>Leader</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brian Jeffries</fullName>
                </value>
                <value>
                    <fullName>Chuck Robbins</fullName>
                </value>
                <value>
                    <fullName>Gary Moore</fullName>
                </value>
                <value>
                    <fullName>Gilles Leyrat</fullName>
                </value>
                <value>
                    <fullName>Guillermo Diaz</fullName>
                </value>
                <value>
                    <fullName>Nick Adamo</fullName>
                </value>
                <value>
                    <fullName>Rebecca Jacoby</fullName>
                </value>
                <value>
                    <fullName>Robert Lloyd</fullName>
                </value>
                <value>
                    <fullName>Ron Ricci</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Chris Dedicoat</fullName>
                </value>
                <value>
                    <fullName>Joe Pinto</fullName>
                </value>
                <value>
                    <fullName>John L. Kern</fullName>
                </value>
                <value>
                    <fullName>Joseph Puthussery</fullName>
                </value>
                <value>
                    <fullName>Lance Perry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metric_Type__c</fullName>
        <description>Metric Types associated with business outcomes</description>
        <label>Metric Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <description>Description of a metric</description>
        <label>Metric Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project that a business outcome is related to</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Business Outcomes</relationshipLabel>
        <relationshipName>Business_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <description>Business Outcomes related to Projects</description>
    <label>Business Outcome</label>
    <nameField>
        <label>Business Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>